--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "nodemon ./bin/www -e js,hbs,css,scss"
+    "dev": "nodemon ./bin/www -e js,hbs,css,scss",
+    "start:dev": "concurrently \"yarn dev\" \"cd frontend && yarn start \""
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@sendgrid/mail": "^7.4.7",
     "bcrypt": "^5.0.1",
     "chalk": "^4.1.2",
+    "concurrently": "^7.0.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
@@ -23,7 +25,6 @@
     "mongoose": "^6.0.10",
     "morgan": "~1.9.1",
     "multer": "^1.4.3",
-    "node-sass-middleware": "^0.11.0",
     "sharp": "^0.29.1"
   },
   "main": "index.js",
@@ -31,7 +32,8 @@
   "devDependencies": {
     "@popperjs/core": "^2.10.2",
     "bootstrap": "^5.1.3",
-    "jquery": "^3.6.0"
+    "jquery": "^3.6.0",
+    "nodemon": "^2.0.15"
   },
   "packageManager": "yarn@3.0.2"
 }
