--- a/package.json
+++ b/package.json
@@ -19,13 +19,15 @@
     "dotenv": "^10.0.0",
     "express": "~4.16.1",
     "express-jwt": "^6.1.0",
+    "express-mongo-sanitize": "^2.2.0",
     "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.10",
     "morgan": "~1.9.1",
     "multer": "^1.4.3",
-    "sharp": "^0.29.1"
+    "sharp": "^0.29.1",
+    "xss": "^1.0.10"
   },
   "main": "index.js",
   "author": "Mavhungu Ronewa",
