--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "express": "~4.16.1",
     "express-jwt": "^6.1.0",
     "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^6.2.0",
     "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^8.5.1",
@@ -27,7 +28,8 @@
     "morgan": "~1.9.1",
     "multer": "^1.4.3",
     "sharp": "^0.29.1",
-    "xss": "^1.0.10"
+    "xss": "^1.0.10",
+    "xss-clean": "^0.1.1"
   },
   "main": "index.js",
   "author": "Mavhungu Ronewa",
