--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "express-jwt": "^6.1.0",
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^6.2.0",
+    "firebase": "^9.6.6",
     "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^8.5.1",
