--- a/.gitignore
+++ b/.gitignore
@@ -140,6 +140,8 @@ out/
 
 # mpeltonen/sbt-idea plugin
 .idea_modules/
+.idea/
+.idea
 
 # JIRA plugin
 atlassian-ide-plugin.xml
@@ -170,4 +172,5 @@ docker-compose.
 
 #backend
 backend/
+backend
 
