--- a/.gitignore
+++ b/.gitignore
@@ -127,7 +127,7 @@ typings/
 # *.ipr
 
 # CMake
-cmake-build-*/
+#cmake-build-*/
 
 # Mongo Explorer plugin
 .idea/**/mongoSettings.xml
@@ -166,10 +166,3 @@ public/
 
 # VScode 
 .vscode
-
-# Docker
-docker-compose.
-
-
-
-
