--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.0",
+    "chart.js": "^3.7.1",
     "feather-icons": "^4.28.0",
     "framer-motion": "^6.2.6",
     "jquery": "^3.6.0",
