--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "framer-motion": "^6.2.6",
     "jquery": "^3.6.0",
     "react": "^17.0.2",
+    "react-chartjs-2": "^4.0.1",
     "react-dom": "^17.0.2",
     "react-feather": "^2.0.9",
     "react-hook-form": "^7.27.1",
