--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,13 @@
     "@fortawesome/free-solid-svg-icons": "^6.0.0",
     "@fortawesome/react-fontawesome": "^0.1.17",
     "@mui/icons-material": "^5.4.2",
+    "@mui/lab": "^5.0.0-alpha.70",
     "@mui/material": "^5.4.3",
     "@popperjs/core": "^2.11.2",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "@time-input-polyfill/react": "^2.0.1",
     "aos": "^2.3.4",
     "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
@@ -24,6 +26,8 @@
     "feather-icons": "^4.28.0",
     "framer-motion": "^6.2.6",
     "jquery": "^3.6.0",
+    "moment": "^2.29.1",
+    "moment-timezone": "^0.5.34",
     "react": "^17.0.2",
     "react-chartjs-2": "^4.0.1",
     "react-dom": "^17.0.2",
