--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,8 @@
     "moment-timezone": "^0.5.34",
     "react": "^17.0.2",
     "react-chartjs-2": "^4.0.1",
+    "react-datepicker": "^4.7.0",
+    "react-datetime-picker": "^3.5.0",
     "react-dom": "^17.0.2",
     "react-feather": "^2.0.9",
     "react-hook-form": "^7.27.1",
