--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -23,3 +23,5 @@ yarn-debug.log*
 yarn-error.log*
 ./src/component/custom
 /src/component/custom
+/src/pages/React.Form.Hook.js
+./src/pages/React.Form.Hook.js
