--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,8 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "@theatre/core": "^0.4.7",
+    "@theatre/studio": "^0.4.7",
     "@time-input-polyfill/react": "^2.0.1",
     "aos": "^2.3.4",
     "axios": "^0.25.0",
@@ -25,10 +27,13 @@
     "faker": "^6.6.6",
     "feather-icons": "^4.28.0",
     "framer-motion": "^6.2.6",
+    "install": "^0.13.0",
     "jquery": "^3.6.0",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.34",
+    "npm": "^8.5.2",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.2.0",
     "react-chartjs-2": "^4.0.1",
     "react-datepicker": "^4.7.0",
     "react-datetime-picker": "^3.5.0",
