--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,6 +44,7 @@
     "react-loader-spinner": "^5.1.4",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.0",
+    "react-spinners": "^0.11.0",
     "react-toastify": "^8.2.0",
     "react-tooltip": "^4.2.21",
     "web-vitals": "^2.1.4"
