--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start:dev": "concurrently \" cd backend && yarn backend\" \"cd frontend && yarn start \"",
-    "start": "concurrently \" cd backend && yarn start\" \"cd frontend && yarn start \""
+    "start:dev": "concurrently \" cd backend && node backend\" \"cd frontend && node start \"",
+    "start": "concurrently \" cd backend && node start\" \"cd frontend && node start \""
   },
   "repository": {
     "type": "git",
@@ -21,5 +21,8 @@
   "homepage": "https://github.com/mavhungu/Medicine-dose-tracker-web-app#readme",
   "dependencies": {
     "concurrently": "^7.0.0"
+  },
+  "devDependencies": {
+    "husky": "^7.0.4"
   }
 }
