--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start:dev": "concurrently \" cd backend && yarn backend\" \"cd frontend && yarn start \"",
-    "start": "concurrently \" cd backend && npm run start\" \"cd frontend && yarn build \""
+    "start": "concurrently \" cd backend && npm run start\" \"cd frontend && npm run build \""
   },
   "repository": {
     "type": "git",
