--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "medicine-dose-tracker-web-app",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "client-install":"npm install --prefix frontend",
+    "start": "node app.js --prefix backend",
+    "server":"nodemon app.js --prefix backend",
+    "client": "npm start --prefix frontend",
     "start:dev": "concurrently \" cd backend && yarn backend\" \"cd frontend && yarn start \"",
-    "start": "concurrently \" cd backend && npm run start\" \"cd frontend && npm run build \""
+    "heroku-postbuild":"NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
   },
   "repository": {
     "type": "git",
