--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "client-install":"npm install --prefix frontend",
-    "start": "node app.js --prefix backend",
+    "start": "npm run start --prefix backend",
     "server":"nodemon app.js --prefix backend",
     "client": "npm start --prefix frontend",
     "start:dev": "concurrently \" cd backend && yarn backend\" \"cd frontend && yarn start \"",
