--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "client-install":"npm install --prefix frontend",
-    "start": "npm run start --prefix backend",
-    "server":"nodemon app.js --prefix backend",
+    "start": "node app.js",
+    "server":"nodemon app.js",
     "client": "npm start --prefix frontend",
     "start:dev": "concurrently \" cd backend && yarn backend\" \"cd frontend && yarn start \"",
     "heroku-postbuild":"NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
@@ -23,9 +23,29 @@
   },
   "homepage": "https://github.com/mavhungu/Medicine-dose-tracker-web-app#readme",
   "dependencies": {
+    "@sendgrid/mail": "^7.6.1",
+    "bcrypt": "^5.0.1",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "cron": "^1.8.2",
+    "dotenv": "^16.0.0",
+    "express": "^4.17.2",
+    "express-flash-message": "^2.1.0",
+    "express-jwt": "^6.1.0",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-session": "^1.17.2",
+    "http-error": "^0.0.6",
+    "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
+    "moment-timezone": "^0.5.34",
+    "mongoose": "^6.2.1",
+    "morgan": "^1.10.0",
+    "twilio": "^3.75.0",
+    "xss-clean": "^0.1.1",
     "concurrently": "^7.0.0"
   },
   "devDependencies": {
+    "nodemon": "^2.0.15",
     "husky": "^7.0.4"
   }
 }
