--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "server":"nodemon app.js",
     "client": "npm start --prefix frontend",
     "start:dev": "concurrently \" cd backend && yarn backend\" \"cd frontend && yarn start \"",
+    "dev": "concurrently \"yarn client\" \"yarn server\"",
     "heroku-postbuild":"NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
   },
   "repository": {
