--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.0",
     "chart.js": "^3.7.1",
+    "country-flag-icons": "^1.4.26",
     "faker": "^5.5.3",
     "feather-icons": "^4.28.0",
     "framer-motion": "^6.2.6",
