--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -8,16 +8,6 @@
       "type": "image/x-icon"
     },
     {
-      "src": "logo0.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "logo0.png",
-      "type": "image/png",
-      "sizes": "512x512"
-    },
-    {
       "src":"/android-chrome-192x192.png",
       "sizes":"192x192",
       "type":"image/png"
@@ -26,6 +16,16 @@
         "src":"/android-chrome-512x512.png",
         "sizes":"512x512",
         "type":"image/png"
+    },
+    {
+      "src": "/logo0.png",
+      "type": "image/png",
+      "sizes": "192x192"
+    },
+    {
+      "src": "/logo0.png",
+      "type": "image/png",
+      "sizes": "512x512"
     }
   ],
   "start_url": ".",
