--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -8,22 +8,22 @@
       "type": "image/x-icon"
     },
     {
-      "src":"/android-chrome-192x192.png",
+      "src":"android-chrome-192x192.png",
       "sizes":"192x192",
       "type":"image/png"
     },
     {
-        "src":"/android-chrome-512x512.png",
+        "src":"android-chrome-512x512.png",
         "sizes":"512x512",
         "type":"image/png"
     },
     {
-      "src": "/logo0.png",
+      "src": "logo0.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "/logo0.png",
+      "src": "logo0.png",
       "type": "image/png",
       "sizes": "512x512"
     }
