--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -8,12 +8,12 @@
       "type": "image/x-icon"
     },
     {
-      "src": "logo0.png",
+      "src": "logo192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "logo0.png",
+      "src": "logo512.png",
       "type": "image/png",
       "sizes": "512x512"
     },
@@ -28,7 +28,7 @@
       "type":"image/png"
     }
   ],
-  "start_url": "./",
+  "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff"
