--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "medicine-dose-tracker-web-app",
   "main": "index.js",
   "scripts": {
-    "client-install":"npm install --prefix frontend",
+    "client-install": "npm install --prefix frontend",
     "start": "node app.js",
-    "server":"nodemon app.js",
+    "server": "nodemon app.js",
     "client": "npm start --prefix frontend",
     "start:dev": "concurrently \" cd backend && yarn backend\" \"cd frontend && yarn start \"",
     "dev": "concurrently \"yarn client\" \"yarn server\"",
-    "heroku-postbuild":"NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
   },
   "repository": {
     "type": "git",
@@ -26,6 +26,7 @@
   "dependencies": {
     "@sendgrid/mail": "^7.6.1",
     "bcrypt": "^5.0.1",
+    "concurrently": "^7.0.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "cron": "^1.8.2",
@@ -41,12 +42,12 @@
     "moment-timezone": "^0.5.34",
     "mongoose": "^6.2.1",
     "morgan": "^1.10.0",
+    "socket.io": "^4.5.1",
     "twilio": "^3.75.0",
-    "xss-clean": "^0.1.1",
-    "concurrently": "^7.0.0"
+    "xss-clean": "^0.1.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15",
-    "husky": "^7.0.4"
+    "husky": "^7.0.4",
+    "nodemon": "^2.0.15"
   }
 }
