--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,8 @@
     "@mui/lab": "^5.0.0-alpha.70",
     "@mui/material": "^5.4.3",
     "@popperjs/core": "^2.11.2",
+    "@rpldy/uploader": "^1.0.0",
+    "@rpldy/uploady": "^1.0.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -26,6 +28,7 @@
     "bootstrap-icons": "^1.8.0",
     "chart.js": "^3.7.1",
     "country-flag-icons": "^1.4.26",
+    "dotenv": "^16.0.1",
     "faker": "^5.5.3",
     "feather-icons": "^4.28.0",
     "framer-motion": "^6.2.6",
@@ -45,7 +48,7 @@
     "react-icons": "^4.3.1",
     "react-loader-spinner": "^5.1.4",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^2.1.3",
     "react-spinners": "^0.11.0",
     "react-toastify": "^8.2.0",
     "react-tooltip": "^4.2.21",
