--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "express-jwt": "^6.1.0",
     "express-mongo-sanitize": "^2.2.0",
     "express-session": "^1.17.2",
+    "express-validator": "^6.14.1",
     "http-error": "^0.0.6",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
