--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "@time-input-polyfill/react": "^2.0.1",
     "aos": "^2.3.4",
     "axios": "^0.25.0",
+    "better-logging": "^5.0.0",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.0",
     "chart.js": "^3.7.1",
@@ -50,6 +51,7 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.1",
     "react-spinners": "^0.11.0",
+    "react-timezone-select": "^1.3.1",
     "react-toastify": "^8.2.0",
     "react-tooltip": "^4.2.21",
     "web-vitals": "^2.1.4"
