--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@sendgrid/mail": "^7.6.1",
     "bcrypt": "^5.0.1",
+    "better-logging": "^5.0.0",
     "concurrently": "^7.0.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
