--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node app.js",
     "server": "nodemon app.js",
     "client": "npm start --prefix frontend",
-    "start:dev": "concurrently \" cd backend && yarn backend\" \"cd frontend && yarn start \"",
+    "start:dev": "concurrently \"yarn server\" \"cd frontend && yarn start \"",
     "dev": "concurrently \"yarn client\" \"yarn server\"",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
   },
